<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    tools:context="com.example.vinitkumaragarwal.orderguru.SignUpActivity">

    <TextView
        android:id="@+id/textcreateaccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/SignIntext"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/editphone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/editphone"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/phonenumber"
        android:inputType="phone"
        android:maxLength="10"
        app:layout_constraintBottom_toTopOf="@+id/editpass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imagephone" />

    <EditText
        android:id="@+id/editpass"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="numberPassword"
        android:maxLength="4"
        app:layout_constraintBottom_toTopOf="@+id/btnsignin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.337"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imagepassword" />

    <ImageView
        android:id="@+id/imagepassword"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:contentDescription="@string/Password"
        app:layout_constraintBottom_toBottomOf="@+id/editpass"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/key_pass" />

    <ImageView
        android:id="@+id/imagephone"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/phonenumber"
        app:layout_constraintBottom_toTopOf="@+id/imagepassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editphone"
        app:srcCompat="@drawable/cell_phone" />

    <Button
        android:id="@+id/btnsignin"
        android:layout_width="320dp"
        android:layout_height="31dp"
        android:height="36dp"
        android:background="#5C6BC0"
        android:text="@string/SignIn"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutortext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayoutSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/txtAskSignUp"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:text="@string/askSignUp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/SignUp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#5C6BC0" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutortext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutSignUp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/textortext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="20sp"
            android:text="@string/ortext" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background ="@xml/progress"
        android:visibility="invisible"/>

</android.support.constraint.ConstraintLayout>
